tests/fixtures/invalid/none_mod_dict.py
# Cannot modulo None and Dict[str, int]
x: None = None % {"a": 1}
